Getting very ahead of the future text-wrap: avoid-short-last-lines property

--- a/src/_assets/css/font-specimen/_base.css
+++ b/src/_assets/css/font-specimen/_base.css
@@ -177,6 +177,7 @@ hr {
 
 	& :is(p, li) {
 		text-wrap: pretty;
+		text-wrap: avoid-short-last-lines;
 	}
 }
 
