--- a/src/_assets/css/global/_typography.css
+++ b/src/_assets/css/global/_typography.css
@@ -90,6 +90,7 @@ time {
 /* Block */
 p {
 	text-wrap: pretty;
+	text-wrap: avoid-short-last-lines;
 }
 
 pre {
